# rust_k8s_webserver

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  Snowstorm_lite-postman_collection.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app_state.rs  handlers.rs  html.rs  main.rs  models.rs  snowstorm.rs
