[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"
authors = ["Nicole Lama <nlama@redhat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"
